# crystalmines2-lynx-recomp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: NOTES.md
games/crystalmines2/: CMakeLists.txt  crystalmines2.hints.txt
games/crystalmines2/src/: main.c
scripts/: extract_rom.ps1
